--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
+        "@tanstack/react-query": "^5.28.14",
+        "@tanstack/react-query-devtools": "^5.28.14",
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
@@ -29,6 +31,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@tanstack/eslint-plugin-query": "^5.28.11",
         "@types/node": "^20.12.2",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
