--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "framer-motion": "^11.0.24",
         "input-otp": "^1.2.3",
         "lucide-react": "^0.363.0",
         "react": "^18.2.0",
