--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.0.6",
         "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
         "@tanstack/react-query": "^5.28.14",
         "@tanstack/react-query-devtools": "^5.28.14",
@@ -23,6 +24,7 @@
         "clsx": "^2.1.0",
         "framer-motion": "^11.0.24",
         "input-otp": "^1.2.3",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.363.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
