--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
+        "@reduxjs/toolkit": "^2.2.3",
         "@tanstack/react-query": "^5.28.14",
         "@tanstack/react-query-devtools": "^5.28.14",
         "axios": "^1.6.8",
@@ -29,6 +30,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.2",
+        "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "tailwind-merge": "^2.2.2",
         "zod": "^3.22.4"
