--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "date-fns": "^3.6.0",
         "framer-motion": "^11.0.24",
         "input-otp": "^1.2.3",
         "lodash": "^4.17.21",
