--- a/backend-sir/package.json
+++ b/backend-sir/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "date-fns": "^3.6.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.2.0",
