"Added OAuth credentials to .env.example, updated mailer service to use OAuth2, removed useNavigate from AppNavbar, and made changes to Blog and Login pages"

--- a/backend-sir/.env.example
+++ b/backend-sir/.env.example
@@ -10,6 +10,11 @@ SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 
+
+OAUTH_CLIENTID=
+OAUTH_CLIENT_SECRET=
+OAUTH_REFRESH_TOKEN=
+
 #JWT
 JWT_DURATION=
 JWT_SECRET=
