--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "tailwind-merge": "^2.2.2",
+        "typewriter-effect": "^2.21.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
