--- a/backend-sir/package.json
+++ b/backend-sir/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
     "joi": "^17.12.1",
@@ -23,12 +24,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
-    "slugify": "^1.6.6",
-    "date-fns": "^3.6.0"
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.2.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   }
 }
