--- a/backend-sir/package.json
+++ b/backend-sir/package.json
@@ -26,7 +26,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "prettier": "^3.3.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.2.0",
