--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-VITE_BASE_URL=https://blogify-d1c4.onrender.com
+# VITE_BASE_URL=https://blogify-d1c4.onrender.com
+VITE_BASE_URL=http://13.203.89.213:8000
