--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # VITE_BASE_URL=https://blogify-d1c4.onrender.com
-VITE_BASE_URL=https://blogify-api.enepal.tech
+VITE_BASE_URL=https://blogify-d1c4.onrender.com
