--- a/backend-sir/.env.example
+++ b/backend-sir/.env.example
@@ -19,4 +19,4 @@ OAUTH_REFRESH_TOKEN=
 JWT_DURATION=
 JWT_SECRET=
 
-CORS_ORIGIN=https://blogify.ruchirajkarki.com.np,http://localhost:5173
+CORS_ORIGIN=https://blogify.ruchirajkarki.com.np,http://localhost:5173,https://blogify-rouge.vercel.app/
